fixed UI problems
fixed table size on asset page, fixed add new user and filter by category buttons that were overlapping the header

--- a/client/src/routes/CheckInPage/CheckInPage.css
+++ b/client/src/routes/CheckInPage/CheckInPage.css
@@ -13,7 +13,7 @@
     background-color: #6486A9;
 }
 
-.main-content {
+.main-content-checkin {
     overflow: auto;
     margin-left: 250px;
     text-align: left;
