--- a/client/src/routes/UserPage/UserPage.css
+++ b/client/src/routes/UserPage/UserPage.css
@@ -13,7 +13,7 @@
     background-color: #6486A9;
 }
 
-.main-content {
+.main-content-user {
     overflow: auto;
     margin-left: 250px;
     text-align: left;
@@ -22,14 +22,15 @@
     height: 100vh;
 }
 
-.clear {
-    margin-bottom: 10px;
-}
-
 .user-actions {
     margin:5px;
 }
 
 .actions {
     font-weight:bolder;
+}
+
+.add-user {
+    position:relative;
+    z-index: -1;
 }
